--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.3",
     "consign": "^0.1.6",
     "express": "^4.16.3",
+    "express-validator": "^5.2.0",
     "mysql2": "^1.5.3",
     "sequelize": "^4.37.8"
   },
