--- a/api/package.json
+++ b/api/package.json
@@ -9,11 +9,15 @@
   "author": "William Miranda",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "consign": "^0.1.6",
     "express": "^4.16.3",
     "express-validator": "^5.2.0",
+    "jwt-simple": "^0.5.1",
     "mysql2": "^1.5.3",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "sequelize": "^4.37.8"
   },
   "devDependencies": {
